update bug cancel select on react-select and implement dark mode into select component react-select

--- a/app/globals.css
+++ b/app/globals.css
@@ -85,3 +85,34 @@
     height: 100dvh;
   }
 }
+
+@layer components {
+  .my-react-select-container .my-react-select__control {
+    @apply bg-white dark:bg-black border-2 border-neutral-300 dark:border-neutral-700 hover:border-neutral-400 dark:hover:border-neutral-500;
+  }
+
+  .my-react-select-container .my-react-select__control--is-focused {
+    @apply border-neutral-500 hover:border-neutral-500 dark:border-neutral-400 dark:hover:border-neutral-400 shadow-none;
+  }
+
+  .my-react-select-container .my-react-select__menu {
+    @apply dark:bg-black  dark:border-neutral-600;
+  }
+
+  .my-react-select-container .my-react-select__option {
+    @apply dark:text-white dark:bg-neutral-700 dark:hover:bg-neutral-800;
+  }
+  /* .my-react-select-container .my-react-select__option--is-focused {
+    @apply bg-neutral-200 dark:bg-neutral-800;
+  } */
+
+  .my-react-select-container .my-react-select__indicator-separator {
+    @apply bg-neutral-400;
+  }
+
+  .my-react-select-container .my-react-select__input-container,
+  .my-react-select-container .my-react-select__placeholder,
+  .my-react-select-container .my-react-select__single-value {
+    @apply text-neutral-600 dark:text-white;
+  }
+}
